<resources>
    <string name="app_name">PAC de Desarrollo</string>
    <string name="bienvenida">¡Bienvenida/o!</string>
    <string name="musica"><![CDATA[<- Música ->]]></string>
    <string name="escribe_tu_nombre">Escribe tu nombre</string>
    <string name="write_name">Máximo 30 caracteres</string>
    <string name="a_donde_ir">¿A dónde quieres ir?</string>
    <string name="ir_a_la_activity_1">IR A LA ACTIVITY 1</string>
    <string name="ir_a_la_activity_2">IR A LA ACTIVITY 2</string>
    <string name="ir_a_la_activity_3">IR A LA ACTIVITY 3</string>
    <string name="ir_a_la_activity_4">IR A LA ACTIVITY 4</string>
    <string name="pulsa_para_empezar">PULSA PARA EMPEZAR</string>
    <string name="requerido">Campo requerido</string>
    <string name="musica_terminada">Música terminada</string>
    <string name="bienvenida_activity2">Bienvenida/o a la Activity 2</string>
    <string name="aceptar">Aceptar</string>
    <string name="usar_camara">USAR LA CÁMARA</string>
    <string name="camara_lanzada">Cámara lanzada</string>
    <string name="boron_play_pulsado">Botón PLAY pulsado</string>
    <string name="boton_stop_pulsado">Botón STOP pulsado</string>
    <string name="boton_pause_pulsado">Botón PAUSE pulsado</string>
    <string name="description_add_data">Agregar datos</string>
    <string name="texto_activity_3">La base de datos ha sido creada con Room.
        Para ver detalles hay que mirar las clases de Kotlin llamadas\n
        <b>Usuario.kt, UsuarioDao.kt, UsuarioDatabase.kt, UsuarioApp.kt</b>.</string>
    <string name="id_busqueda">Introduce ID para la búsqueda</string>
    <string name="write_id">Máximo 7 cifras</string>
    <string name="buscar_usuario">Buscar usuario</string>
    <string name="dato_no_existe">No existe usuario con este ID</string>
    <string name="usuario_encontrado">Usuario encontrado</string>
    <string name="datos_usuario">Datos del usuario</string>
    <string name="introduce_datos">Introduce los datos.\n
        El <b>ID</b> será generado automáticamente.</string>
    <string name="nombre">Nombre</string>
    <string name="telefono">Teléfono</string>
    <string name="write_tel">Máximo 14 dígitos</string>
    <string name="agregar_usuario">AGREGAR USUARIO</string>
    <string name="error">ERROR!!!</string>
    <string name="imposible_agregar">No ha sido posible isnertar el usuario</string>
    <string name="usuario_agregado">Usuario agregado</string>
    <string name="cancelar_operacion">Cancelar operación</string>
    <string name="lanzar_act2">Lanzando Actividad 2</string>
    <string name="lanzar_act3">Lanzando Actividad 3</string>
    <string name="lanzar_act4">Lanzando Actividad 4</string>
    <string name="ruta_archivo">Ruta archivo</string>
    <string name="titulo_act1">Activity1</string>
    <string name="titulo_act2">Activity2</string>
    <string name="titulo_act3">Activity3</string>
    <string name="titulo_act4">Activity4</string>
    <string name="titulo_act_gregar">Agregar dato nuevo</string>
    <string name="id_generado">Se ha generado el siguiente ID para el usuario insertado:</string>
    <string name="aqu_vendra_la_foto_nueva">AQUÍ VENDRA LA FOTO NUEVA</string>
    <string name="imagen_fotografia">Imagen tomada con la cámara</string>
    <string name="mostrar_todos">Mostrar todos los datos</string>
    <string name="titulo_act_mostrar_todos">Contenido Base de datos</string>
    <string name="setId">ID: %1$s</string>
    <string name="salir">Salir</string>
    <string name="imagen_de_bienvenida">Imagen de bienvenida</string>
    <string name="play">PLAY</string>
    <string name="stop">STOP</string>
    <string name="boton_pausa">Botón pausa</string>
    <string name="agregar">Agregar</string>
    <string name="imagen_1">Imagen 1</string>
    <string name="imagen_2">iamgen_2</string>
    <string name="imagen_3">Imagen_3</string>
    <string name="imagen_4">Imagen 4</string>
    <string name="imagen_5">Imagen 5</string>
    <string name="imagen_6">Imagen 6</string>
    <string name="nombre_mayusculas">NOMBRE</string>
    <string name="telefono_mayusculas">TELÉFONO</string>
</resources>