<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_fondo_act2"
    tools:context=".otrasClasesDeAyuda.ActivityAgregarDatos">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAdd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default"
        android:text="@string/agregar_usuario"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@id/tilTelefono"
        app:layout_constraintStart_toStartOf="@id/tilTelefono"
        app:layout_constraintTop_toBottomOf="@id/tilTelefono" />


    <TextView
        android:id="@+id/textViewPrueba"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        android:background="@color/primaryColor"
        android:fontFamily="sans-serif-condensed"
        android:padding="@dimen/margin_min"
        android:text="@string/introduce_datos"
        android:textAlignment="center"
        android:textAppearance="?attr/textAppearanceHeadline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilNombre"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_default"
        android:layout_marginTop="@dimen/margin_default"
        android:layout_marginEnd="@dimen/margin_default"
        android:hint="@string/nombre"
        app:counterEnabled="true"
        app:counterMaxLength="@integer/counter_max_name"
        app:endIconMode="clear_text"
        app:helperText="@string/write_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewPrueba"
        app:startIconDrawable="@drawable/ic_person">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNombre"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLength="@integer/counter_max_name"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilTelefono"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_default"
        android:layout_marginTop="@dimen/margin_default"
        android:layout_marginEnd="@dimen/margin_default"
        android:hint="@string/telefono"
        app:counterEnabled="true"
        app:counterMaxLength="@integer/max_tel_length"
        app:endIconMode="clear_text"
        app:helperText="@string/write_tel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilNombre"
        app:startIconDrawable="@drawable/ic_phone">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etTelefono"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="@integer/max_tel_length"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCancelar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default"
        android:layout_marginBottom="@dimen/margin_default"
        android:backgroundTint="#C3FF3737"
        android:text="@string/cancelar_operacion"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/btnAdd"
        app:layout_constraintEnd_toEndOf="@id/tilTelefono"
        app:layout_constraintStart_toStartOf="@id/tilTelefono" />

</androidx.constraintlayout.widget.ConstraintLayout>