<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryDarkColor"
    tools:context=".activitiesPrincipales.Activity4">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAct1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_min"
        android:backgroundTint="@color/primaryLightColor"
        android:text="@string/ir_a_la_activity_1"
        android:textColor="@color/black"
        app:icon="@drawable/ic_next"
        app:iconTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnAct1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primaryDarkColor"
            android:paddingBottom="@dimen/bottom_padding">

            <ImageView
                android:id="@+id/imagen1"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="@dimen/margin_default"
                android:contentDescription="@string/imagen_1"
                android:scaleType="centerCrop"
                android:src="@drawable/imagen1"
                app:layout_constraintDimensionRatio="H, 4:3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imagen2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="@dimen/margin_default"
                android:contentDescription="@string/imagen_2"
                android:scaleType="centerCrop"
                android:src="@drawable/imagen2"
                app:layout_constraintDimensionRatio="H, 4:3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imagen1" />

            <ImageView
                android:id="@+id/imagen3"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="@dimen/margin_default"
                android:contentDescription="@string/imagen_3"
                android:scaleType="centerCrop"
                android:src="@drawable/imagen3"
                app:layout_constraintDimensionRatio="H, 4:3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imagen2" />

            <ImageView
                android:id="@+id/imagen4"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="@dimen/margin_default"
                android:contentDescription="@string/imagen_4"
                android:scaleType="centerCrop"
                android:src="@drawable/imagen4"
                app:layout_constraintDimensionRatio="H, 4:3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imagen3" />

            <ImageView
                android:id="@+id/imagen5"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="@dimen/margin_default"
                android:contentDescription="@string/imagen_5"
                android:scaleType="centerCrop"
                android:src="@drawable/imagen5"
                app:layout_constraintDimensionRatio="H, 4:3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imagen4" />

            <ImageView
                android:id="@+id/imagen6"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="@dimen/margin_default"
                android:contentDescription="@string/imagen_6"
                android:scaleType="centerCrop"
                android:src="@drawable/imagen6"
                app:layout_constraintDimensionRatio="H, 4:3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imagen5" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>

